# serial_monitor

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main_window.cpp  main_window.hpp  main_window.ui  serial_monitor.cpp  serial_monitor.qrc  settings_dialog.cpp  settings_dialog.hpp  settings_dialog.ui  status_widget.cpp  status_widget.hpp  status_widget.ui  version.hpp.in
src/html/: about.html
src/win32/: serial_monitor.rc
